--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -141,6 +141,7 @@
     <Compile Include="ExtapathyExtended.cs" />
     <Compile Include="Extended.cs" />
     <Compile Include="FF8String.cs" />
+    <Compile Include="FF8StringReference.cs" />
     <Compile Include="Ffcc.cs" />
     <Compile Include="FfccVaribleGroup.cs" />
     <Compile Include="FFmpegBinariesHelper.cs" />
@@ -704,7 +705,6 @@
     <Compile Include="Menu\DrawPointer.cs" />
     <Compile Include="Menu\Faces.cs" />
     <Compile Include="Menu\Faces.ID.cs" />
-    <Compile Include="Menu\FF8StringReference.cs" />
     <Compile Include="Menu\Icons.cs" />
     <Compile Include="Menu\Icons.ID.cs" />
     <Compile Include="Menu\Icons.InsertCustomEntries.cs" />
